test_data/end_to_end/err__if_missing_else/stderr.txt
error: mismatching return types: function `f::(_)` expects `i32`, found `{}`
  --> main.cz:2:5
2 |     if cond {
        ~~~~~~~~~
